Fix ventures section footer top spacing

--- a/src/components/home/Ventures/index.module.css
+++ b/src/components/home/Ventures/index.module.css
@@ -15,6 +15,10 @@
   grid-row-gap: 28px;
 }
 
+.footer {
+  padding-top: 112px;
+}
+
 @media (min-width: 768px) {
   .root {
     padding: 112px 28px 224px;
